# chess-study

./: .env.example  .gitignore  LICENSE  README.md  chess_cli.py  chesscom.py  lichess.py  pyproject.toml  timeline.py
chess_study.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
